--- a/content/6_ObjectDesign/1_Reuse.tex
+++ b/content/6_ObjectDesign/1_Reuse.tex
@@ -3,7 +3,7 @@
 
  Software reuse increases the productivity of development teams and improves the overall quality of the product. Therefore, our proposed system defines several components that can be reused from existing solutions. All external components must be open-sourced under the MIT license in order to fulfill our non-functional requirement \ref{nfr:Legal}. Furthermore, custom components of subsystems can be implemented by reusing pattern solutions as defined by the \ac{GoF}. 
  
- Tooling to parse an IDL specification and generate library code for various programming languages is available for many modern Web APIs. For REST-based Web APIs, the OpenAPI Generator\footnote{https://openapi-generator.tech/} is an open-source tool that can be integrated in existing Java projects via Maven/Gradle plugins, or used via CLI and an online service\footnote{http://api.openapi-generator.tech/index.html}. It supports parsing of OpenAPI IDLs regardless of whether they were encoded to YAML or JSON. Additionally, it generates library code in 65 programming languages and dialects. Google's gRPC\footnote{https://grpc.io/} technology uses protocol buffers as an IDL and as a format for exchanging messages. Parsing protocol buffers and generating library code is currently available for 16 programming languages and dialects, with support for additional languages upcoming. Emerging GraphQL\footnote{https://graphql.org/} APIs are described by the \ac{SDL} for which different tools exist that are able to generate library code from it. On the one hand, the GraphQL code generator\footnote{https://graphql-code-generator.com/} supports five programming languages and offers several configuration options to further customize the emitted code. Quicktype\footnote{https://quicktype.io/}, on the other hand, supports 19 programming languages and similar configuration options. One limitation of all tools above is their integrability as a framework. They are designed to generate library code persisted in files, which prevents developers from accessing intermediate artifacts like the decoded IDL document. This restricts developers from generating code in a programming language that is not supported by those tools or formatting the source code to suit their needs. However, for some IDLs and programming languages new frameworks are published that can be integrated into existing projects to get access to intermediate artifacts. For example, the OpenAPIKit\footnote{https://github.com/mattpolzin/OpenAPIKit} is an open-source project that offers a Swift library to en-/decode OpenAPI IDL documents. By separating the parsing of an IDL document and the subsequent library generation, the extensibility for new programming languages and IDL types is considerably increased. 
+ Tooling to parse an IDL specification and generate library code for various programming languages is available for many modern Web APIs. For REST-based Web APIs, the OpenAPI Generator\footnote{https://openapi-generator.tech/} is an open-source tool that can be integrated in existing Java projects via Maven/Gradle plugins, or used via CLI and an online service\footnote{http://api.openapi-generator.tech/index.html}. It supports parsing of OpenAPI IDLs regardless of whether they were encoded to YAML or JSON. Additionally, it generates library code in 65 programming languages and dialects. Google's gRPC\footnote{https://grpc.io/} technology uses protocol buffers as an IDL and as a format for exchanging messages. Parsing protocol buffers and generating library code is currently available for 16 programming languages and dialects, with support for additional languages upcoming. Emerging GraphQL\footnote{https://graphql.org/} APIs are described by the \ac{SDL} for which different tools exist that are able to generate library code from it. On the one hand, the GraphQL code generator\footnote{https://graphql-code-generator.com/} supports five programming languages and offers several configuration options to further customize the emitted code. Quicktype\footnote{https://quicktype.io/}, on the other hand, supports 19 programming languages and similar configuration options. One limitation of all tools above is their integrability as a framework. They are designed to generate library code persisted in files, which prevents developers from accessing intermediate artifacts like the decoded IDL document. Generating source code in a programming language that is not supported by those tools requires forking the codebase to extend their functionality. However, for some IDLs and programming languages new frameworks are published that can be integrated into existing projects to get access to intermediate artifacts. For example, the OpenAPIKit\footnote{https://github.com/mattpolzin/OpenAPIKit} is an open-source project that offers a Swift library to en-/decode OpenAPI IDL documents. By separating the parsing of an IDL document and the subsequent library generation, the extensibility for new programming languages and IDL types is considerably increased. 
  
  Supporting multiple programming languages is also a challenge for the \texttt{Source\-Code} \texttt{Importer} subsystem. It must support parsing source code of a programming language into its \ac{AST}. Tools are available for most programming languages as many features of \acp{IDE} like syntax highlighting or auto-completion rely on them. However, most of these tools are commercial products and are not available under an open-source licence. One example is the JavaParser\footnote{https://javaparser.org/} which is available as a Maven and Gradle plugin for parsing, analyzing and generating Java code. Other frameworks were created through the active contribution of open source communities. Acorn\footnote{https://github.com/acornjs/acorn} is a parser for JavaScript code that supports plugins for JavaScript dialects and frameworks like React JSX. Sourcery\footnote{https://github.com/krzysztofzablocki/Sourcery} is a Swift library that provides an \ac{API} that offers parsing and generating Swift code based on Stencil templates. All of these frameworks are limited to parsing source code of a single programming language. To support many different languages simultaneously, custom lexers and parsers must be specified and implemented for each language. While this is a cumbersome manual effort, tools like \ac{ANTLR}\footnote{https://www.antlr.org/} enable developers to generate lexers and parsers in Java, C\#, C++, JavaScript, Python, Swift and Go. Therefore, users have to provide a grammar of the language that describes its structure. This grammar is defined using the Antlr4 grammar syntax. The application's repository contains over 200 predefined grammars that cover many modern programming languages.
  
