--- a/content/6_ObjectDesign/2_InterfaceSpecification.tex
+++ b/content/6_ObjectDesign/2_InterfaceSpecification.tex
@@ -57,7 +57,7 @@ Each type of change is applied to one object of the Web API and targets one prop
 	}
 \end{figure}
 
-For performing the migration steps, the \texttt{Migration} \texttt{Manager} subsystem incorporates the imported migration guide and decoded previous facade. Analogous to the types of changes corresponding types of migration are defined. \texttt{Migrations} contain the change that must be migrated as well as information that indicates whether they are solvable and have been executed. Furthermore, they reference a \texttt{Modifiable} object on which the migration is performed. The \texttt{Modifiable} interface is implemented by a wrapper component that acts as an adapter for modifying a \texttt{SourceCodeEntity} of the previous facade. By executing a \texttt{Migration}, the \texttt{modify} method of a \texttt{Modifiable} is triggered which adapts the \texttt{SourceCodeEntity} according to the type of migration. The \texttt{mo\-di\-fied} property of a \texttt{Modifiable} denotes that this object has already been migrated. All migrations as well as the previous facade are composed in the \texttt{MigrationSet}. By analyzing the changes stated in the migration guide and their target entities, it creates the corresponding migrations by invoking the \texttt{ac\-ti\-vate} method. Unsupported or incorrect combinations result in an unsolvable migration. The \texttt{MigrationSet} is the public interface of the subsystem by providing the \texttt{perform} method to perform a migration and return the adapted facade element.
+For performing the migration steps, the \texttt{Migration} \texttt{Manager} subsystem incorporates the imported migration guide and decoded previous facade. Analogous to the types of changes corresponding types of migration are defined. \texttt{Migrations} contain the change that must be migrated as well as information that indicates whether they are solvable and have been executed. Furthermore, they reference a \texttt{Modifiable} object on which the migration is performed. The \texttt{Modifiable} interface is implemented by a wrapper component that acts as an adapter for modifying a \texttt{SourceCodeEntity} of the previous facade. By executing a \texttt{Migration}, the \texttt{modify} method of a \texttt{Modifiable} is triggered which adapts the \texttt{SourceCodeEntity} according to the type of migration. The \texttt{mo\-di\-fied} property of a \texttt{Modifiable} denotes that this object has already been migrated. All migrations as well as the previous facade are composed in the \texttt{MigrationSet}. By analyzing the changes stated in the migration guide and their target entities, it creates the corresponding migrations by invoking the \texttt{ac\-ti\-vate} method. Unsupported or incorrect combinations result in an unsolvable migration. In addition, the user can select a migration strategy to control the migration under certain conditions. The selected migration strategy thereby alters the adaption of source code entities or prevents migrating certain types of changes. Breaking changes that are not migrated automatically must be manually adapted by client developers to fix their application. The \texttt{MigrationSet} is the public interface of the subsystem by providing the \texttt{perform} method to perform a migration and return the adapted facade element.
 
 \begin{figure}[!h]
 	\centering{
@@ -67,7 +67,7 @@ For performing the migration steps, the \texttt{Migration} \texttt{Manager} subs
 	}
 \end{figure}
 
-Generating source code from decoded entities for various programming languages requires the \texttt{Code} \texttt{Generator} subsystem to use the strategy pattern. Thereby, the subsystem can select the correct syntax elements during runtime. In contrast to the \texttt{SourceCode} \texttt{Importer} subsystem, it takes wrapped \texttt{SourceCodeEntity} objects as input and generates a string of compilable source code in the programming language the user specified. Its service is used by the subsystems concerned with generating the library code for an IDL and generating the migrated facade code.
+Generating source code from decoded entities for various programming languages requires the \texttt{Code} \texttt{Generator} subsystem to use the strategy pattern. Thereby, the subsystem can select the correct syntax elements during runtime. In contrast to the \texttt{SourceCode} \texttt{Importer} subsystem, it takes \texttt{Modifiable} objects, i.e. wrapped \texttt{SourceCodeEntity} objects, as input and generates a string of compilable source code in the programming language the user specified. Its service is used by the subsystems concerned with generating the library code for an IDL and generating the migrated facade code.
 
 \begin{figure}[!h]
 	\centering{
@@ -77,4 +77,4 @@ Generating source code from decoded entities for various programming languages r
 	}
 \end{figure}
 
-The whole process is orchestrated by the \texttt{Persisting} \texttt{Manager} subsystem. The \texttt{Persisting} \texttt{Manager} takes the user input and selects the desired type of \ac{IDL} and programming language. Additionally, it contains all configuration options of the user that are necessary to retrieve the Web API's \ac{IDL} and migration guide. Furthermore, it contains the ruleset specifying the formatting style of the source code. After configuring the system according to the user's input, the \texttt{build} method starts the importing, adapting and generating process. Therefore, the \texttt{LibraryBuilder} and \texttt{FacadeBuilder} objects are instantiated and their \texttt{build} method is executed. Both objects hold references to their subsystems that are responsible for generating library code from an imported \ac{IDL} and generating source code of an adapted facade, respectively. Once it receives the generated source code strings, the \texttt{PersistingManager} formats the code using a \texttt{Code\-For\-mat\-ting} component instantiated according to the currently selected programming language. As this is done at runtime, the strategy pattern is also applied here. Formatting source code is available by using third-party components for many programming languages, e.g. SwiftFormat\footnote{https://github.com/apple/swift-format} for Swift and Prettier\footnote{https://prettier.io/} for JavaScript und Java. The formatted source code is then persisted by invoking the \texttt{persist} method. Although the internal structure of the emitted library is defined by our system, the user is able to specify its identifier and its target location.
+The process is orchestrated by the \texttt{Persisting} \texttt{Manager} subsystem. It takes the user input and selects the desired type of \ac{IDL} and programming language. The selected IDL type results in the initialization of the corresponding concrete strategy of the \texttt{IDL Importer} subsystem. The user's choice of programming language determines the concrete strategy of the \texttt{SourceCode Importer}, \texttt{Code Generation} and \texttt{Code Formatting} subsystems. Additionally, the \texttt{Persisting} \texttt{Manager} contains all configuration options of the user that are necessary to retrieve the Web API's \ac{IDL} and migration guide. Furthermore, it contains the ruleset specifying the formatting style of the source code. After configuring the system according to the user's input, the \texttt{build} method starts the importing, adapting and generating process. Therefore, the \texttt{LibraryBuilder} and \texttt{FacadeBuilder} objects are instantiated and their \texttt{build} method is executed. Both objects hold references to their subsystems that are responsible for generating library code from an imported \ac{IDL} and generating source code of an adapted facade, respectively. Once it receives the generated source code strings, the \texttt{PersistingManager} formats the code using a \texttt{Code\-For\-mat\-ting} component instantiated according to the currently selected programming language. As this is done at runtime, the strategy pattern is also applied here. Formatting source code is available by using third-party components for many programming languages, e.g. SwiftFormat\footnote{https://github.com/apple/swift-format} for Swift and Prettier\footnote{https://prettier.io/} for JavaScript und Java. The formatted source code is then persisted by invoking the \texttt{persist} method. Although the internal structure of the emitted library is defined by our system, the user is able to specify its identifier and its target location.
