--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -1,9 +1,3 @@
 \chapter{Abstract}
 
-\textit{
-    \begin{itemize}
-        \item What is the motivation of your thesis? Why is it interesting from a scientific point of view? Which main problem do you like to solve?
-        \item What is the purpose of the document? What is the main content, the main contribution?
-        \item What is your methodology? How do you proceed?
-    \end{itemize}
-}
+Modern web-based APIs offer a broad variety of services for numerous distributed client applications. Web APIs must evolve to remain functional and adapt to changes in requirements or their environment. Ideally, an API contract creates a consistent, shared understanding of its service between provider and consumer. The provider-side evolution of an API often introduces changes to this contract that consumers need to manually adapt to. Thus far, there is no automated process for migrating between different Web API versions. In this thesis, we propose a tool-supported workflow using a novel machine-readable migration guide in order to reduce the impact of Web API evolution on its consumers. The structure of the migration guide enables providers to specify breaking changes that they introduced in consecutive versions of their Web API. Different types of change are specified, each assigned to a change object and specific target. Furthermore, every type of change incorporates individual properties that facilitate their migration. Our proposed system uses the information stated in the migration guide and generates a client library with a stable public interface. The client library is integrated as an intermediary between a client application and a Web API. Our proposed system supports generating client libraries in multiple programming languages for various types of Web APIs. Therefore, components and subsystems concerned with the language-specific generation of libraries or the import of different types of IDL documents are designed with strict consideration of extensibility. We validate our approach by implementing Pallidor, an instantiation of our proposed system in the Swift programming language. Pallidor generates a Swift package based on an OpenAPI specification and automatically migrates it according to changes specified in a machine-readable migration guide. 
