--- a/thesis.tex
+++ b/thesis.tex
@@ -7,13 +7,13 @@
 \newcommand{\chair}{\phantom{Chair for Applied Software Engineering}}
 \newcommand{\faculty}{TUM Department of Informatics}
 \newcommand{\uni}{Technical University of Munich}
-\newcommand{\studycourse}{Informatics}
+\newcommand{\studycourse}{Information Systems}
 
 \newcommand{\authorname}{Andre Weinkötz}
 \newcommand{\city}{Munich}
 
 \newcommand{\thesistype}{Master's Thesis}
-\newcommand{\worktype}{\thesistype\space in Informatics}
+\newcommand{\worktype}{\thesistype\space in Information Systems}
 \newcommand{\titleFirstLanguage}{A Process Model for Client Migration after Service Changes in Distributed Systems}
 \newcommand{\titleForeignLanguage}{Ein Prozessmodell für Anwendungsmigrationen nach Service Änderungen in verteilten Systemen}
 
