--- a/content/7_CaseStudyEvaluation/2_Evaluation.tex
+++ b/content/7_CaseStudyEvaluation/2_Evaluation.tex
@@ -2,3 +2,10 @@
 \label{sec:Evaluation}
 
 How we evaluated it. using 3 web apis and perform migration. all hand-made
+
+
+\begin{itemize}
+	\item OAI spec can not nest schemas
+	\item other restrictions to specs (must define success return value), needs consistency with actual API (not string error defined but json msg returned)
+	\item OAIGenerator drawbacks and why we cant use it?
+\end{itemize}
