--- a/content/7_CaseStudyEvaluation/1_Implementation.tex
+++ b/content/7_CaseStudyEvaluation/1_Implementation.tex
@@ -29,7 +29,7 @@ In addition to our own implementations, third-party open source components that 
 		 \begin{center}
 			\textbf{Swift Package Author / Publisher}
 		\end{center} \\ \hline
-			\textit{IDL Importer} & OpenAPIKit & 2.1.0 \newline (Nov. 3rd, 2020) &
+			\textit{IDL Importer} & OpenAPIKit & 2.2.0 \newline (Dec. 20th, 2020) &
 			Mathew Polzin \\ \hline
 			\textit{Source Code Importer} & Sourcery & 1.0.2 \newline (Nov. 30th, 2020) &
 			Krzysztof Zabłocki \\ \hline
