--- a/references.bib
+++ b/references.bib
@@ -44,6 +44,15 @@
   number = {2}
 }
 
+@article{brown_refactoring_1998,
+  title = {Refactoring {{Software}}, {{Architectures}}, and {{Projects}} in {{Crisis}}},
+  author = {Brown, William J and Malveau, Raphael C and Iii, Hays W McCormick and Mowbray, Thomas J and Wiley, John and Ipsen, Robert and Hudson, Theresa},
+  year = {1998},
+  pages = {157},
+  file = {/Users/andre/Zotero/storage/NLTKZ3MP/Brown et al. - Refactoring Software, Architectures, and Projects .pdf},
+  language = {en}
+}
+
 @book{bruegge_object-oriented_2010,
   title = {Object-Oriented Software Engineering: Using {{UML}}, Patterns, and {{Java}}},
   shorttitle = {Object-Oriented Software Engineering},
