--- a/settings.tex
+++ b/settings.tex
@@ -116,7 +116,6 @@
 \newcommand{\argmin}[1]{\underset{#1}{\operatorname{arg}\,\operatorname{min}}\;}
 
 
-
 %%%%%%%%%%%%%%%%%%%
 % code listings
 %%%%%%%%%%%%%%%%%%%
@@ -258,6 +257,10 @@
 }
 
 \usepackage{enumitem}
+
+\usepackage{multirow, tabularx, booktabs}
+\usepackage{pdflscape}
+\usepackage{longtable}
 
 \makeatletter
 \newcommand{\customlabel}[2]{%
